[gd_scene load_steps=111 format=2]

[ext_resource path="res://assets/archer/spr_ArcherIdle_strip_NoBkg.png" type="Texture" id=1]
[ext_resource path="res://assets/archer/spr_ArcherAttack_strip_NoBkg.png" type="Texture" id=2]
[ext_resource path="res://assets/archer/spr_ArcherRun_strip_NoBkg.png" type="Texture" id=3]
[ext_resource path="res://assets/archer/spr_ArcherMelee_strip_NoBkg.png" type="Texture" id=5]
[ext_resource path="res://scripts/Archer.gd" type="Script" id=6]
[ext_resource path="res://assets/archer/spr_ArcherDeath_strip_NoBkg.png" type="Texture" id=7]
[ext_resource path="res://assets/archer/spr_ArcherDash_strip_NoBkg-1.png.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 2 )
region = Rect2( 1260, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 2 )
region = Rect2( 1620, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 2 )
region = Rect2( 1980, 0, 90, 128 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 7 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 7 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 7 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 7 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 7 )
region = Rect2( 1664, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 7 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 7 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 7 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 7 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 7 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 7 )
region = Rect2( 2432, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 7 )
region = Rect2( 2560, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 7 )
region = Rect2( 2688, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 7 )
region = Rect2( 2816, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 7 )
region = Rect2( 2944, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 8 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 8 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 8 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 8 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 8 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 8 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 8 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 8 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 8 )
region = Rect2( 1536, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 5 )
region = Rect2( 1792, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 5 )
region = Rect2( 1920, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 5 )
region = Rect2( 2048, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 5 )
region = Rect2( 2176, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 5 )
region = Rect2( 2304, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 5 )
region = Rect2( 2432, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 5 )
region = Rect2( 2560, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 5 )
region = Rect2( 2688, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 5 )
region = Rect2( 2816, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=56]
animations = [ {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "attack",
"speed": 8.0
}, {
"frames": [ SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ) ],
"loop": true,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ) ],
"loop": true,
"name": "melee",
"speed": 8.0
}, {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ) ],
"loop": true,
"name": "shield",
"speed": 8.0
}, {
"frames": [ SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ) ],
"loop": true,
"name": "spin",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=57]
extents = Vector2( 4.5, 18.5 )

[sub_resource type="RectangleShape2D" id=58]
extents = Vector2( 1, 18.625 )

[node name="Archer" type="AnimatedSprite"]
position = Vector2( -119.766, -235.5 )
scale = Vector2( 1.82031, 1.75 )
frames = SubResource( 56 )
animation = "idle"
frame = 5
playing = true
offset = Vector2( 210, 378 )
flip_h = true
script = ExtResource( 6 )

[node name="hurtBox" type="Area2D" parent="."]
position = Vector2( 206, 371 )
collision_layer = 512
collision_mask = 512
__meta__ = {
"_edit_group_": true
}

[node name="collisionHurt" type="CollisionShape2D" parent="hurtBox"]
shape = SubResource( 57 )

[node name="hitbox" type="Area2D" parent="."]
position = Vector2( 194, 371 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 58 )

[connection signal="animation_finished" from="." to="." method="_on_Archer_animation_finished"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
